# fflonk_verifier

./: .travis.yml  Cargo.toml  LICENSE  README.md  fflonk.h  main.go  verifier-key-fork12.json  verifier-key-fork9.json
benches/: base.rs
ci/: tests.sh
ci/docker/: entrypoint.sh
ci/tests/: 005-cargo-ci.sh  010-cargo-fmt.sh  012-cargo-readme.sh  015-cargo-clippy.sh  020-cargo-test.sh  030-cargo-build.sh  040-cargo-audit.sh  110-wasm-pack-build-node.sh  210-npm-install.sh  220-npm-test.sh
resources/bins/: expected.json  proof.hex  proof.json  zksync_vk.json
resources/proves/: fork5.json  fork5_alt.json  fork6.json  fork6_alt.json
src/: data.rs  hash.rs  key.rs  lib.rs  macros.rs  proof.rs  proof_input.rs  serde.rs  should.rs  utils.rs
tests/: integration.rs  proof_converter.rs  verifier.rs
tests/data/: fflonk.proof  public_inputs
tests/formats/: mod.rs
