[package]
name = "fflonk_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = { version = "0.7.5", default-features = false }
digest = { version = "0.10.7" }
sha3 = { version = "0.10.8", default-features = false }
substrate-bn = "0.6.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = { version = "0.18.2", default-features = false }
hex-literal = "0.4.1"
rand = "0.8.5"
divan = "0.1.11"

[[bench]]
name = "base"
harness = false

[features]
default = ["std"]
std = ["sha3/std", "digest/std", "snafu/std"]
