[package]
name = "fflonk_verifier"
version = "0.5.0"
edition = "2021"
rust-version = "1.60"
license = "GPL-3.0"
repository = "https://github.com/HorizenLabs/fflonk_verifier"
authors = [
    "Michele d'Amico <mdamico@horizenlabs.io>",
    "Horizen <info@horizen.io>",
]
description = "A pure Rust library to verify fflonk proof"
keywords = ["crypto", "no-std", "blockchain", "cryptography"]

[dependencies]
snafu = { version = "0.8.3", default-features = false }
digest = { version = "0.10.7" }
sha3 = { version = "0.10.8", default-features = false }
substrate-bn = "0.6.0"
serde = { version = "1.0.197", optional = true, default-features = false, features = [
    "derive",
] }
ethnum = { version = "1.5.0", optional = true, features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }
anyhow = { version = "1.0.86", optional = true }
hex = { version = "0.4.3", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = { version = "0.19.0", default-features = false }
hex-literal = "0.4.1"
rand = "0.8.5"
divan = "0.1.11"
serde_json = "1.0.114"
ciborium = "0.2.2"
hex = "0.4.3"
test_bin = "0.4.0"
tempfile = "3.10.1"

[[bin]]
name = "proof-converter"
path = "src/bin/proof_converter.rs"
required-features = ["bins"]

[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"
required-features = ["bins"]

[[bench]]
name = "base"
harness = false

[features]
default = ["std"]
bins = ["dep:clap", "dep:serde_json", "dep:hex", "dep:anyhow", "std", "serde"]
serde = ["dep:serde", "dep:ethnum"]
std = ["sha3/std", "digest/std", "snafu/std", "serde?/std"]
